syntax = "proto3";

package controlplane;

option go_package = "github.com/FedjaMocnik/razpravljalnica/pkgs/control/pb";

message NodeInfo {
  string node_id = 1;
  string address = 2;
}


service ControlPlaneService {

  // Periodični Heartbeat.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);

  // Torej spremebe chaina: Server se mu pridruži ali zapusti.
  rpc JoinChain(JoinChainRequest) returns (JoinChainResponse);

  // Pošljemo serverju nove sosede.
  rpc UpdateNeighbors(UpdateNeighborsRequest)
      returns (UpdateNeighborsResponse);

  // torej ker control ve nek chain je to ubistvu request, če ga še kdo potrebuje.
  rpc GetChain(GetChainRequest) returns (GetChainResponse);

  // Raft peer management
  rpc AddPeer(AddPeerRequest) returns (AddPeerResponse);
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse);
  rpc GetRaftState(GetRaftStateRequest) returns (GetRaftStateResponse);
}


message HeartbeatRequest {
  string node_id = 1;
}

message HeartbeatResponse {
  bool ok = 1;
  string leader_addr = 2;  // Naslov leaderja za redirect
}

// Raft peer management
message AddPeerRequest {
  string node_id = 1;
  string raft_addr = 2;
  string grpc_addr = 3;
}

message AddPeerResponse {
  bool ok = 1;
  string error = 2;
}

message RemovePeerRequest {
  string node_id = 1;
}

message RemovePeerResponse {
  bool ok = 1;
  string error = 2;
}

message GetRaftStateRequest {}

message GetRaftStateResponse {
  bool is_leader = 1;
  string leader_id = 2;
  string leader_addr = 3;
  repeated RaftPeer peers = 4;
  string state = 5;  // "leader", "follower", "candidate"
}

message RaftPeer {
  string node_id = 1;
  string raft_addr = 2;
  string grpc_addr = 3;
}

message JoinChainRequest {
  NodeInfo node = 1;
}

// Primeri: A -> B -> C

// Nov server:
// D se pridruži. prev=B, next=C, sync_from=B
// UpdateNeighbors(B, prev=A, next=D)
// UpdateNeighbors(C, prev=D, next=nil)

// En umre (B):
// UpdateNeighbors(A, prev=nil, next=C)
// UpdateNeighbors(C, prev=A, next=nil)

message JoinChainResponse {
  NodeInfo previous = 1;   // empty = head
  NodeInfo next = 2;       // empty = tail
  NodeInfo sync_from = 3;  // koga prosimo za stvari (previous)
}


message UpdateNeighborsRequest {
  NodeInfo self = 1;
  NodeInfo previous = 2; // empty = head
  NodeInfo next = 3;     // empty = tail
}

message UpdateNeighborsResponse {
  bool ok = 1;
}


message GetChainRequest {}

message GetChainResponse {
  repeated NodeInfo chain = 1;
  NodeInfo head = 2;
  NodeInfo tail = 3;
}
